syntax = "proto3";

option go_package = "document-generators-presentation-abstractions";

package Edm.DocumentGenerators.Presentation.Abstractions;

option csharp_namespace = "Edm.DocumentGenerators.Presentation.Abstractions";

import "Grpc/Services/DocumentsDetails/Queries/GetDocumentsReferenceDetails/Contracts/document_reference_details.proto";

message GetDocumentsReferenceDetailsQuery {
  repeated string documents_ids = 1;
}

message GetDocumentsReferenceDetailsQueryResponse {
  repeated DocumentReferenceDetailsDto details = 1;
}
